# papermill_report

./: .editorconfig  .flake8  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  jupyterhub_config.py  openapi.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_e2e.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
binder/: environment.yml  jupyter_config.py  postBuild
e2e-tests/: conftest.py  docker-compose.yml  run_e2e.sh  test_integration.py
examples/: broken_parameters.ipynb
examples/subfolder/: simple_execute.ipynb
papermill_report/: __init__.py  __main__.py  handlers.py  papermill_report.py  utils.py
papermill_report/templates/: error.html  page.html  report.html
papermill_report/tests/: __init__.py  conftest.py  test_api.py  test_configuration.py  test_integration.py  test_settings.py
