[metadata]
name = papermill_report
description = Microservice to generate Jupyter reports
long-description = file: README.md
url = https://github.com/ariadnext/papermill_report
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development
author = ARIADNEXT
license = BSD-3-Clause
keywords = papermill_report, papermill, jupyterhub, tornado

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
zip_safe = False
setup_requires =
  setuptools_scm
  toml

[entry_points]
console_scripts =
    papermill-report = papermill_report.papermill_report.main

[bdist_wheel]
universal = 1

[aliases]
# Define setup.py command aliases here
test = pytest
